src/gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-psd2

spec: 
  selector:
    app: gateway-psd2
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
